DPZ Gain: $ 59.87 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5
DPZ Gain: $ -13.7 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 25.73 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 16.99 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 4.1 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -29.3 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 16.08 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 17.52 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
DPZ Gain: $ -18.14 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
DPZ Gain: $ 20.84 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
DPZ Gain: $ -8.66 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 51.24 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR3
DPZ Gain: $ -15.61 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
DPZ Gain: $ 0.8 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR3
DPZ Gain: $ 50.19 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
DPZ Gain: $ 28.84 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
DPZ Gain: $ 22.21 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
DPZ Gain: $ -27.67 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
DPZ Gain: $ 34.12 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
DPZ Gain: $ 35.36 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
DPZ Gain: $ 37.51 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AL
DPZ Gain: $ -15.61 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
DPZ Gain: $ 47.76 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
DPZ Gain: $ -2 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
DPZ Gain: $ 47.6 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
DPZ Gain: $ 0.92 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP_PM
DPZ Gain: $ 15.77 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV
DPZ Gain: $ 59.87 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IR3
DPZ Gain: $ 51.24 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR
DPZ Gain: $ 50.77 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AV
DPZ Gain: $ 52.58 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AL
DPZ Gain: $ 51.49 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_VI
DPZ Gain: $ 54.33 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_LI
DPZ Gain: $ -10.92 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP
DPZ Gain: $ 42.22 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM
DPZ Gain: $ 51.16 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_SS
DPZ Gain: $ 59.87 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QL
DPZ Gain: $ 33.06 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_DB10
DPZ Gain: $ 56.01 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AO
DPZ Gain: $ 57.22 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AC
DPZ Gain: $ 47.76 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT
DPZ Gain: $ 2.98 Win %: 88.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_PM
DPZ Gain: $ 31.87 Win %: 100.00 in 9 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TS
DPZ Gain: $ -20.87 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 29.51 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 17.1 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 2.16 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -60.7 Win %: 0 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 7.66 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 20.58 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
DPZ Gain: $ -15.64 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
DPZ Gain: $ 22.34 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
DPZ Gain: $ -3.39 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 41.38 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_IR3
DPZ Gain: $ -15.66 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP
DPZ Gain: $ -12.8 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_IR3
DPZ Gain: $ 43.03 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR
DPZ Gain: $ 23.42 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV
DPZ Gain: $ 8.96 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL
DPZ Gain: $ -40.35 Win %: 22.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP
DPZ Gain: $ 22.75 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR
DPZ Gain: $ 30.9 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV
DPZ Gain: $ 35.38 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AL
DPZ Gain: $ -11.87 Win %: 33.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP
DPZ Gain: $ 51.36 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL
DPZ Gain: $ -17.81 Win %: 11.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP
DPZ Gain: $ 26.11 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO_AC
DPZ Gain: $ -9.64 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_PM
DPZ Gain: $ 14.29 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV
DPZ Gain: $ 49.63 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IR3
DPZ Gain: $ 41.38 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR
DPZ Gain: $ 44.94 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AV
DPZ Gain: $ 42.36 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AL
DPZ Gain: $ 45.23 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_VI
DPZ Gain: $ 44.93 Win %: 66.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_LI
DPZ Gain: $ -12.8 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP
DPZ Gain: $ 29.95 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM
DPZ Gain: $ 47.89 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_SS
DPZ Gain: $ 56.29 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QL
DPZ Gain: $ 28.96 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_DB10
DPZ Gain: $ 60.58 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO
DPZ Gain: $ 8.68 Win %: 44.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AC
DPZ Gain: $ 40.53 Win %: 55.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT
DPZ Gain: $ -6.78 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_PM
DPZ Gain: $ 8.99 Win %: 77.00 in 9 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TS
DPZ Gain: $ -20.3 Win %: 33.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
DPZ Gain: $ 12.54 Win %: 33.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
DPZ Gain: $ -13.35 Win %: 33.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
DPZ Gain: $ 17.58 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
DPZ Gain: $ -26.57 Win %: 22.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
DPZ Gain: $ 10.08 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
DPZ Gain: $ -43.5 Win %: 22.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
DPZ Gain: $ -17.86 Win %: 44.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
DPZ Gain: $ 2.93 Win %: 22.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
DPZ Gain: $ 0.33 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
DPZ Gain: $ 45.74 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_IR2
DPZ Gain: $ -12.55 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_QP
DPZ Gain: $ -8.31 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QP_IR2
DPZ Gain: $ 46.92 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_TR
DPZ Gain: $ 15.84 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AV
DPZ Gain: $ 46.49 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AL
DPZ Gain: $ -17.58 Win %: 33.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_QP
DPZ Gain: $ 30.79 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_TR
DPZ Gain: $ 3.26 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_AV
DPZ Gain: $ 39.15 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_AL
DPZ Gain: $ -11.47 Win %: 44.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_QP
DPZ Gain: $ 39.22 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QL
DPZ Gain: $ -7.81 Win %: 22.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QP
DPZ Gain: $ 49.61 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AO_AC
DPZ Gain: $ -4.7 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QP_PM
DPZ Gain: $ 49.28 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV
DPZ Gain: $ 44.16 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IR2
DPZ Gain: $ 47.17 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR
DPZ Gain: $ 18.01 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AV
DPZ Gain: $ 57.66 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AL
DPZ Gain: $ 50.62 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_VI
DPZ Gain: $ 49.96 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_LI
DPZ Gain: $ -8.09 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QP
DPZ Gain: $ 34.11 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM
DPZ Gain: $ 46 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_SS
DPZ Gain: $ 55.65 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QL
DPZ Gain: $ 19.41 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_DB8
DPZ Gain: $ 49.61 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AO
DPZ Gain: $ 49.61 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AC
DPZ Gain: $ 39.22 Win %: 66.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT
DPZ Gain: $ 6.49 Win %: 55.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_PM
DPZ Gain: $ 26.77 Win %: 77.00 in 9 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TS
DPZ Gain: $ -28.25 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB30
DPZ Gain: $ -10.53 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB30
DPZ Gain: $ -40.63 Win %: 11.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB30
DPZ Gain: $ -60.39 Win %: 11.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB30
DPZ Gain: $ -55.36 Win %: 11.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB30
DPZ Gain: $ -15.38 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB30
DPZ Gain: $ -14.09 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB30
DPZ Gain: $ -29.79 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB30
DPZ Gain: $ -6.27 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB30
DPZ Gain: $ -25.22 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB30
DPZ Gain: $ 68.97 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR5
DPZ Gain: $ -18.29 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
DPZ Gain: $ -4.14 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR5
DPZ Gain: $ 43.51 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
DPZ Gain: $ 40.21 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
DPZ Gain: $ 33.5 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
DPZ Gain: $ -29.99 Win %: 22.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
DPZ Gain: $ 30.6 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
DPZ Gain: $ 26.56 Win %: 77.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
DPZ Gain: $ 25.3 Win %: 77.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
DPZ Gain: $ -20.04 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
DPZ Gain: $ 56.04 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
DPZ Gain: $ -1.98 Win %: 77.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
DPZ Gain: $ 20.8 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
DPZ Gain: $ 0 Win %: 100.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
DPZ Gain: $ 32.4 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_RV
DPZ Gain: $ 59.51 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IR5
DPZ Gain: $ 66 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TR
DPZ Gain: $ 68.69 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AV
DPZ Gain: $ 58.1 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AL
DPZ Gain: $ 42.86 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_VI
DPZ Gain: $ 61.29 Win %: 66.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_LI
DPZ Gain: $ -0.64 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QP
DPZ Gain: $ 20.2 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_HM
DPZ Gain: $ 62.81 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_SS
DPZ Gain: $ 56.54 Win %: 44.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_QL
DPZ Gain: $ -16.07 Win %: 11.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_DB30
DPZ Gain: $ -24.58 Win %: 33.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AO
DPZ Gain: $ 30.2 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_AC
DPZ Gain: $ 56.04 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_IT
DPZ Gain: $ 0 Win %: 100.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_PM
DPZ Gain: $ 14.24 Win %: 55.00 in 9 days with algo TB1_HL_HS_QM_OB3_OS3_CB5_CS5_TS
