DPZ Gain: $ 46.26 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5
DPZ Gain: $ -37.12 Win %: 25.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
DPZ Gain: $ 11.32 Win %: 41.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
DPZ Gain: $ -20.05 Win %: 33.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
DPZ Gain: $ 18.0 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
DPZ Gain: $ -29.74 Win %: 16.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
DPZ Gain: $ -0.62 Win %: 50.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
DPZ Gain: $ -62.43 Win %: 16.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
DPZ Gain: $ -39.08 Win %: 33.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
DPZ Gain: $ -3.12 Win %: 50.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
DPZ Gain: $ -32.0 Win %: 33.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
DPZ Gain: $ 37.86 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_IR2
DPZ Gain: $ 42.07 Win %: 83.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_TS
DPZ Gain: $ -29.06 Win %: 33.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR_QP
DPZ Gain: $ -29.67 Win %: 33.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QP_IR2
DPZ Gain: $ 46.11 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_TR
DPZ Gain: $ 7.87 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AV
DPZ Gain: $ 53.19 Win %: 66.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_AL
DPZ Gain: $ -25.74 Win %: 25.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV_QP
DPZ Gain: $ 25.52 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_TR
DPZ Gain: $ -12.19 Win %: 50.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_AV
DPZ Gain: $ 23.55 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_AL
DPZ Gain: $ -30.98 Win %: 33.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM_QP
DPZ Gain: $ 9.91 Win %: 66.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QL
DPZ Gain: $ -23.65 Win %: 41.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_QP
DPZ Gain: $ 11.17 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT_TS
DPZ Gain: $ 46.26 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AO_AC
DPZ Gain: $ -7.39 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QP_PM
DPZ Gain: $ 0.16 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AV_TS
DPZ Gain: $ 47.59 Win %: 83.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AL_TS
DPZ Gain: $ 66.3 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_RV
DPZ Gain: $ 40.57 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IR2
DPZ Gain: $ 43.55 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TR
DPZ Gain: $ 7.87 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AV
DPZ Gain: $ 55.96 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AL
DPZ Gain: $ 44.56 Win %: 66.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_VI
DPZ Gain: $ 43.2 Win %: 66.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_LI
DPZ Gain: $ -23.65 Win %: 41.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QP
DPZ Gain: $ 25.79 Win %: 66.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_HM
DPZ Gain: $ 29.91 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_SS
DPZ Gain: $ 55.62 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_QL
DPZ Gain: $ 12.58 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_DB8
DPZ Gain: $ 46.26 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AO
DPZ Gain: $ 46.26 Win %: 75.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_AC
DPZ Gain: $ 0.55 Win %: 66.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_IT
DPZ Gain: $ 3.2 Win %: 58.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_PM
DPZ Gain: $ 51.33 Win %: 91.00 in 12 days with algo TB4_OC_QM_OB1_OS1_CB5_CS5_TS
DPZ Gain: $ -28.65 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 26.2 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 16.84 Win %: 50.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 6.23 Win %: 50.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -40.46 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 15.87 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 1.21 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
DPZ Gain: $ -29.65 Win %: 16.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
DPZ Gain: $ -20.76 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
DPZ Gain: $ -22.94 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 51.08 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR3
DPZ Gain: $ 22.64 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_TS
DPZ Gain: $ -25.25 Win %: 16.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
DPZ Gain: $ -14.12 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR3
DPZ Gain: $ 48.77 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
DPZ Gain: $ 41.43 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
DPZ Gain: $ 25.38 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
DPZ Gain: $ -40.22 Win %: 33.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
DPZ Gain: $ 38.13 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
DPZ Gain: $ 21.02 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
DPZ Gain: $ 14.51 Win %: 50.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AL
DPZ Gain: $ -40.53 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
DPZ Gain: $ 14.43 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
DPZ Gain: $ -16.67 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
DPZ Gain: $ 18.06 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT_TS
DPZ Gain: $ -38.93 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
DPZ Gain: $ 2.37 Win %: 91.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP_PM
DPZ Gain: $ 10.58 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AV_TS
DPZ Gain: $ 13.68 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AL_TS
DPZ Gain: $ 16.38 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_RV
DPZ Gain: $ 59.56 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IR3
DPZ Gain: $ 53.28 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TR
DPZ Gain: $ 41.07 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AV
DPZ Gain: $ 46.48 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AL
DPZ Gain: $ 42.19 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_VI
DPZ Gain: $ 50.3 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_LI
DPZ Gain: $ -12.92 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QP
DPZ Gain: $ 37.0 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_HM
DPZ Gain: $ 50.76 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_SS
DPZ Gain: $ 59.56 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_QL
DPZ Gain: $ 31.38 Win %: 50.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_DB10
DPZ Gain: $ 49.35 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AO
DPZ Gain: $ 52.29 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_AC
DPZ Gain: $ 14.43 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_IT
DPZ Gain: $ 6.97 Win %: 91.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_PM
DPZ Gain: $ 26.17 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB3_OS3_CB5_CS5_TS
DPZ Gain: $ -37.02 Win %: 16.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 27.01 Win %: 33.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 19.55 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 5.25 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -71.06 Win %: 8.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 7.94 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 8.33 Win %: 33.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
DPZ Gain: $ -31.24 Win %: 16.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
DPZ Gain: $ -14.4 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
DPZ Gain: $ -33.13 Win %: 16.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 44.48 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_IR3
DPZ Gain: $ 17.62 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_TS
DPZ Gain: $ -31.32 Win %: 33.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP
DPZ Gain: $ -27.19 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_IR3
DPZ Gain: $ 43.52 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR
DPZ Gain: $ 22.55 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV
DPZ Gain: $ 12.7 Win %: 50.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL
DPZ Gain: $ -71.48 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP
DPZ Gain: $ 26.24 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR
DPZ Gain: $ 21.66 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV
DPZ Gain: $ 22.99 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AL
DPZ Gain: $ -30.12 Win %: 25.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP
DPZ Gain: $ 8.68 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL
DPZ Gain: $ -27.45 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP
DPZ Gain: $ 2.61 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_TS
DPZ Gain: $ 20.18 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO_AC
DPZ Gain: $ -7.95 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_PM
DPZ Gain: $ 22.11 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AV_TS
DPZ Gain: $ 19.53 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AL_TS
DPZ Gain: $ 17.51 Win %: 50.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV
DPZ Gain: $ 56.27 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IR3
DPZ Gain: $ 44.25 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR
DPZ Gain: $ 37.39 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AV
DPZ Gain: $ 38.41 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AL
DPZ Gain: $ 35.75 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_VI
DPZ Gain: $ 38.25 Win %: 58.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_LI
DPZ Gain: $ -23.37 Win %: 33.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP
DPZ Gain: $ 30.1 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM
DPZ Gain: $ 49.73 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_SS
DPZ Gain: $ 31.1 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QL
DPZ Gain: $ 32.81 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_DB10
DPZ Gain: $ 63.08 Win %: 75.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO
DPZ Gain: $ -117.0 Win %: 41.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AC
DPZ Gain: $ 5.37 Win %: 66.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT
DPZ Gain: $ -2.79 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_PM
DPZ Gain: $ 18.66 Win %: 83.00 in 12 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TS
DPZ Gain: $ -57.53 Win %: 8.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB8
DPZ Gain: $ -12.58 Win %: 16.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB8
DPZ Gain: $ -17.42 Win %: 33.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB8
DPZ Gain: $ -6.89 Win %: 33.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB8
DPZ Gain: $ -60.28 Win %: 16.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB8
DPZ Gain: $ -22.76 Win %: 25.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB8
DPZ Gain: $ -30.48 Win %: 25.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB8
DPZ Gain: $ -58.29 Win %: 8.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB8
DPZ Gain: $ -30.71 Win %: 25.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB8
DPZ Gain: $ -51.01 Win %: 16.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB8
DPZ Gain: $ 35.53 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR2
DPZ Gain: $ 14.97 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_TS
DPZ Gain: $ -47.81 Win %: 25.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
DPZ Gain: $ -14.03 Win %: 41.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR2
DPZ Gain: $ 33.35 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
DPZ Gain: $ 34.22 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
DPZ Gain: $ 37.91 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
DPZ Gain: $ -24.94 Win %: 33.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
DPZ Gain: $ 11.62 Win %: 50.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
DPZ Gain: $ 15.05 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
DPZ Gain: $ 2.51 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AL
DPZ Gain: $ -34.22 Win %: 33.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
DPZ Gain: $ 10.18 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
DPZ Gain: $ -21.57 Win %: 41.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
DPZ Gain: $ 18.46 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_TS
DPZ Gain: $ -126.99 Win %: 41.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
DPZ Gain: $ -12.3 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
DPZ Gain: $ 11.82 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AV_TS
DPZ Gain: $ 4.95 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AL_TS
DPZ Gain: $ 53.29 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV
DPZ Gain: $ 44.66 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IR2
DPZ Gain: $ 35.53 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR
DPZ Gain: $ 34.22 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AV
DPZ Gain: $ 29.29 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AL
DPZ Gain: $ 25.28 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_VI
DPZ Gain: $ -2.5 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_LI
DPZ Gain: $ -21.57 Win %: 41.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP
DPZ Gain: $ 17.75 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM
DPZ Gain: $ 42.92 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_SS
DPZ Gain: $ 46.24 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QL
DPZ Gain: $ -3.72 Win %: 41.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_DB8
DPZ Gain: $ 24.3 Win %: 50.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AO
DPZ Gain: $ -54.41 Win %: 58.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AC
DPZ Gain: $ 2.27 Win %: 66.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT
DPZ Gain: $ 7.96 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_PM
DPZ Gain: $ 20.3 Win %: 75.00 in 12 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TS
DPZ Gain: $ -28.2 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
DPZ Gain: $ 5.14 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
DPZ Gain: $ 0.58 Win %: 33.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
DPZ Gain: $ -0.03 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
DPZ Gain: $ -55.13 Win %: 16.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
DPZ Gain: $ -6.12 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
DPZ Gain: $ -17.59 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
DPZ Gain: $ -34.22 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
DPZ Gain: $ -16.19 Win %: 33.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
DPZ Gain: $ -26.13 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
DPZ Gain: $ 75.64 Win %: 75.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_IR5
DPZ Gain: $ 24.24 Win %: 75.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_TS
DPZ Gain: $ -20.16 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP
DPZ Gain: $ -12.79 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_IR5
DPZ Gain: $ 47.64 Win %: 58.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR
DPZ Gain: $ 59.96 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV
DPZ Gain: $ 60.64 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL
DPZ Gain: $ -30.51 Win %: 25.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP
DPZ Gain: $ 33.25 Win %: 75.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR
DPZ Gain: $ 28.59 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV
DPZ Gain: $ 38.31 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AL
DPZ Gain: $ -28.77 Win %: 33.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP
DPZ Gain: $ 16.58 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL
DPZ Gain: $ -4.33 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP
DPZ Gain: $ 25.87 Win %: 83.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_TS
DPZ Gain: $ -41.64 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO_AC
DPZ Gain: $ 0.0 Win %: 100.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_PM
DPZ Gain: $ 17.7 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV_TS
DPZ Gain: $ 17.38 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL_TS
DPZ Gain: $ 23.71 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV
DPZ Gain: $ 62.51 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IR5
DPZ Gain: $ 73.87 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR
DPZ Gain: $ 62.64 Win %: 58.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV
DPZ Gain: $ 63.32 Win %: 58.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL
DPZ Gain: $ 37.48 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_VI
DPZ Gain: $ 63.31 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_LI
DPZ Gain: $ -4.33 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP
DPZ Gain: $ 42.12 Win %: 75.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM
DPZ Gain: $ 68.5 Win %: 58.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_SS
DPZ Gain: $ 66.47 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QL
DPZ Gain: $ 4.34 Win %: 41.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_DB30
DPZ Gain: $ 9.13 Win %: 50.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO
DPZ Gain: $ 37.46 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AC
DPZ Gain: $ 16.58 Win %: 66.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT
DPZ Gain: $ 0.0 Win %: 100.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_PM
DPZ Gain: $ 21.79 Win %: 75.00 in 12 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TS
