EDIT Gain: $ 4.67 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1
EDIT Gain: $ -4.63 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_TR_QP_DB30
EDIT Gain: $ -0.33 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_TR_DB30
EDIT Gain: $ 2.31 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_AV_DB30
EDIT Gain: $ 2.37 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_AL_DB30
EDIT Gain: $ -7.79 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_QP_DB30
EDIT Gain: $ -0.33 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM_TR_DB30
EDIT Gain: $ 2.31 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM_AV_DB30
EDIT Gain: $ -7.79 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM_QP_DB30
EDIT Gain: $ 2.15 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_IT_QL_DB30
EDIT Gain: $ 0.14 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_IT_QP_DB30
EDIT Gain: $ 1.51 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_TR_IR5
EDIT Gain: $ -7.56 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_TR_QP
EDIT Gain: $ -11.27 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_QP_IR5
EDIT Gain: $ 1.82 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_TR
EDIT Gain: $ 4.66 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_AV
EDIT Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_AL
EDIT Gain: $ -11.72 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV_QP
EDIT Gain: $ 1.82 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM_TR
EDIT Gain: $ 4.66 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM_AV
EDIT Gain: $ -11.72 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM_QP
EDIT Gain: $ -1.43 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_IT_QL
EDIT Gain: $ -11.72 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_IT_QP
EDIT Gain: $ 3.23 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_AO_AC
EDIT Gain: $ 4.67 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_RV
EDIT Gain: $ 1.75 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_IR5
EDIT Gain: $ 1.82 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_TR
EDIT Gain: $ 4.66 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_AV
EDIT Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_AL
EDIT Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_VI
EDIT Gain: $ 1.82 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_LI
EDIT Gain: $ -11.72 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_QP
EDIT Gain: $ 4.67 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_HM
EDIT Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_SS
EDIT Gain: $ -1.43 Win %: 0 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_QL
EDIT Gain: $ 2.15 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_DB30
EDIT Gain: $ 3.23 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_AO
EDIT Gain: $ 4.67 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_AC
EDIT Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_HL_QM_OB2_OS2_CB1_CS1_IT
EDIT Gain: $ -3.55 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_TR_QP_DB8
EDIT Gain: $ -2.99 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_TR_DB8
EDIT Gain: $ -0.31 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_AV_DB8
EDIT Gain: $ -2.78 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_AL_DB8
EDIT Gain: $ -5.77 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_QP_DB8
EDIT Gain: $ -2.99 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM_TR_DB8
EDIT Gain: $ 0.93 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM_AV_DB8
EDIT Gain: $ -5.77 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM_QP_DB8
EDIT Gain: $ 2.62 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_IT_QL_DB8
EDIT Gain: $ -0.04 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_IT_QP_DB8
EDIT Gain: $ -2.48 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_TR_IR2
EDIT Gain: $ -3.64 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_TR_QP
EDIT Gain: $ -10.51 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_QP_IR2
EDIT Gain: $ -1.87 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_TR
EDIT Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_AV
EDIT Gain: $ -1.83 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_AL
EDIT Gain: $ -9.53 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV_QP
EDIT Gain: $ -1.87 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM_TR
EDIT Gain: $ -1.39 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM_AV
EDIT Gain: $ -9.53 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM_QP
EDIT Gain: $ 1.56 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_IT_QL
EDIT Gain: $ -0.08 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_IT_QP
EDIT Gain: $ -564.44 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_AO_AC
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_RV
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_IR2
EDIT Gain: $ -1.87 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_TR
EDIT Gain: $ -1.39 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_AV
EDIT Gain: $ -4.95 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_AL
EDIT Gain: $ -1 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_VI
EDIT Gain: $ 0.39 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_LI
EDIT Gain: $ -9.53 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_QP
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_HM
EDIT Gain: $ 4.13 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_SS
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_QL
EDIT Gain: $ 2.42 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_DB8
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_AO
EDIT Gain: $ -217.89 Win %: 0 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_AC
EDIT Gain: $ 1.56 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB2_OS2_CB2_CS2_IT
EDIT Gain: $ -3.85 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_QP_DB8
EDIT Gain: $ -3.29 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_TR_DB8
EDIT Gain: $ 0.73 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AV_DB8
EDIT Gain: $ -3.28 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AL_DB8
EDIT Gain: $ -5.64 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_QP_DB8
EDIT Gain: $ -3.29 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_TR_DB8
EDIT Gain: $ 0.93 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_AV_DB8
EDIT Gain: $ -5.64 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_QP_DB8
EDIT Gain: $ 2.62 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QL_DB8
EDIT Gain: $ -0.04 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QP_DB8
EDIT Gain: $ -2.78 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_IR2
EDIT Gain: $ -3.94 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_QP
EDIT Gain: $ -12.41 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QP_IR2
EDIT Gain: $ -2.17 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_TR
EDIT Gain: $ -1.94 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AV
EDIT Gain: $ -5.07 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AL
EDIT Gain: $ -9.4 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_QP
EDIT Gain: $ -2.17 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_TR
EDIT Gain: $ -1.39 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_AV
EDIT Gain: $ -9.4 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_QP
EDIT Gain: $ 1.56 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QL
EDIT Gain: $ -0.08 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QP
EDIT Gain: $ -554.59 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AO_AC
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IR2
EDIT Gain: $ -2.17 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR
EDIT Gain: $ -1.39 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AV
EDIT Gain: $ -4.83 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AL
EDIT Gain: $ -1 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_VI
EDIT Gain: $ 0.12 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_LI
EDIT Gain: $ -9.4 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QP
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM
EDIT Gain: $ 4.13 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_SS
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QL
EDIT Gain: $ 2.42 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_DB8
EDIT Gain: $ 4.29 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AO
EDIT Gain: $ -559.25 Win %: 0 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AC
EDIT Gain: $ 1.56 Win %: 100.00 in 1 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT
EDIT Gain: $ -6.14 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_TR_QP_DB15
EDIT Gain: $ -3.52 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_TR_DB15
EDIT Gain: $ -2.18 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_AV_DB15
EDIT Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_AL_DB15
EDIT Gain: $ -5.74 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_QP_DB15
EDIT Gain: $ -3.52 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM_TR_DB15
EDIT Gain: $ -2.18 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM_AV_DB15
EDIT Gain: $ -5.73 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM_QP_DB15
EDIT Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_IT_QL_DB15
EDIT Gain: $ -0.09 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_IT_QP_DB15
EDIT Gain: $ -0.67 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_TR_IR4
EDIT Gain: $ -7.85 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_TR_QP
EDIT Gain: $ -9.36 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_QP_IR4
EDIT Gain: $ -1.2 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_TR
EDIT Gain: $ -1.34 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_AV
EDIT Gain: $ 1.59 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_AL
EDIT Gain: $ -7.83 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV_QP
EDIT Gain: $ -1.2 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM_TR
EDIT Gain: $ -1.34 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM_AV
EDIT Gain: $ -7.82 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM_QP
EDIT Gain: $ 1.41 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_IT_QL
EDIT Gain: $ -0.08 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_IT_QP
EDIT Gain: $ -671.07 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_AO_AC
EDIT Gain: $ 4 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_RV
EDIT Gain: $ 3.68 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_IR4
EDIT Gain: $ -1.2 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_TR
EDIT Gain: $ -1.34 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_AV
EDIT Gain: $ 1.59 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_AL
EDIT Gain: $ 1.49 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_VI
EDIT Gain: $ 2.63 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_LI
EDIT Gain: $ -7.82 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_QP
EDIT Gain: $ 4 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_HM
EDIT Gain: $ 4 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_SS
EDIT Gain: $ 4 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_QL
EDIT Gain: $ 1.74 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_DB15
EDIT Gain: $ 4.2 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_AO
EDIT Gain: $ -49.01 Win %: 0 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_AC
EDIT Gain: $ 1.41 Win %: 100.00 in 1 days with algo TB2_PL_QM_OB4_OS4_CB3_CS3_IT
